feat: 實作檔案上傳與管理 API (Step 12)
新增功能：
- 檔案上傳、下載、更新、刪除 API
- 分類管理完整 CRUD 功能
- 檔案儲存服務 (支援本地儲存)
- 檔案列表查詢、搜尋、排序、分頁
- 檔案統計功能
- 活動記錄服務

技術實作：
- FastAPI 檔案上傳處理 (multipart/form-data)
- aiofiles 非同步檔案操作
- 檔案大小與格式驗證
- 處室級資料隔離
- 權限控制 (使用者/管理員)

新增檔案：
- app/api/files.py - 檔案管理 API
- app/api/categories.py - 分類管理 API
- app/schemas/file.py - 檔案相關 Schema
- app/schemas/category.py - 分類相關 Schema
- app/services/file_storage.py - 檔案儲存服務
- app/services/activity.py - 活動記錄服務
- scripts/test_file_api.py - API 測試腳本

待完成：
- Celery 背景任務整合
- 檔案文字擷取與向量化
- 批次上傳功能

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ flower==2.0.0
 # 認證與安全
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+bcrypt==4.0.1  # 兼容 passlib 的版本
 
 # 資料驗證
 pydantic==2.9.0
