完善系統核心功能並修正多項問題

--- a/.env.example
+++ b/.env.example
@@ -1,32 +1,37 @@
 # 應用設定
 APP_NAME=RAG Knowledge Base
 DEBUG=True
-API_V1_PREFIX=/api
+API_V1_PREFIX=/api  # API 路徑前綴，前端需使用 http://localhost:8000/api
 
 # 安全設定
-SECRET_KEY=your-super-secret-key-change-this-in-production-min-32-chars
 JWT_SECRET_KEY=your-jwt-secret-key-change-this-in-production-min-32-chars
 JWT_ALGORITHM=HS256
 JWT_EXPIRE_MINUTES=1440
 
 # 資料庫
 DATABASE_URL=postgresql+asyncpg://postgres:postgres123@localhost:5432/rag_db
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres123
+POSTGRES_DB=rag_db
 DB_POOL_SIZE=20
 DB_MAX_OVERFLOW=40
 
+# 預設管理員帳號（開發環境）
+SUPER_ADMIN_USERNAME=superadmin
+SUPER_ADMIN_PASSWORD=admin123
+SUPER_ADMIN_EMAIL=superadmin@ncku.edu.tw
+DEPT_ADMIN_PASSWORD=admin123
+
 # Redis
 REDIS_URL=redis://localhost:6379/0
-REDIS_CACHE_TTL=3600
 
-# OpenAI
-OPENAI_API_KEY=sk-your-openai-api-key-here
-OPENAI_MODEL=gpt-4
-OPENAI_EMBEDDING_MODEL=text-embedding-ada-002
-
-# Qdrant
+# Qdrant 向量資料庫
 QDRANT_URL=http://localhost:6333
-QDRANT_API_KEY=
-QDRANT_COLLECTION=rag_documents
+
+# 注意：OpenAI API 功能目前使用 Mock 模擬，實際整合時需加入以下設定：
+# OPENAI_API_KEY=sk-your-api-key
+# OPENAI_MODEL=gpt-4
+# OPENAI_EMBEDDING_MODEL=text-embedding-ada-002
 
 # 檔案上傳
 MAX_FILE_SIZE=52428800
@@ -35,7 +40,3 @@ UPLOAD_DIR=./uploads
 
 # CORS
 CORS_ORIGINS=http://localhost:5173,http://localhost:3000
-
-# Celery
-CELERY_BROKER_URL=redis://localhost:6379/1
-CELERY_RESULT_BACKEND=redis://localhost:6379/2
