--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,22 +6,22 @@ services:
     image: postgres:16
     container_name: rag_postgres
     environment:
-      POSTGRES_DB: rag_db
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres123
+      POSTGRES_DB: ${POSTGRES_DB:-rag_db}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres123}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres}"]
       interval: 10s
       timeout: 5s
       retries: 5
     networks:
       - rag_network
 
-  # Redis
+  # Redis (可選)
   redis:
     image: redis:7-alpine
     container_name: rag_redis
@@ -37,24 +37,12 @@ services:
       retries: 5
     networks:
       - rag_network
-
-  # Qdrant 向量資料庫
-  qdrant:
-    image: qdrant/qdrant:latest
-    container_name: rag_qdrant
-    volumes:
-      - qdrant_data:/qdrant/storage
-    ports:
-      - "6333:6333"
-    environment:
-      - QDRANT__SERVICE__HTTP_PORT=6333
-    networks:
-      - rag_network
+    profiles:
+      - with-redis
 
 volumes:
   postgres_data:
   redis_data:
-  qdrant_data:
 
 networks:
   rag_network:
