--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,71 @@
-# Web 框架
-fastapi==0.115.0
-uvicorn[standard]==0.30.0
-python-multipart==0.0.9
+# ==============================================================================
+# 核心框架 (Core Framework)
+# ==============================================================================
+# FastAPI - 現代化的高效能 Web 框架
+fastapi>=0.115.0,<0.116.0
 
-# 資料庫 ORM
-sqlalchemy==2.0.35
-asyncpg==0.29.0
-alembic==1.13.0
+# Uvicorn - ASGI 伺服器 (standard 包含 uvloop, httptools 等效能優化)
+uvicorn[standard]>=0.30.0,<0.31.0
 
-# 快取與佇列
-redis==5.0.0
-celery==5.4.0
-flower==2.0.0
+# Python-Multipart - 處理檔案上傳
+python-multipart>=0.0.9,<0.1.0
 
-# 認證與安全
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-bcrypt==4.0.1  # 兼容 passlib 的版本
+# ==============================================================================
+# 資料庫與 ORM (Database & ORM)
+# ==============================================================================
+# SQLAlchemy - 強大的 ORM 框架 (2.0+ 支援非同步)
+sqlalchemy>=2.0.35,<3.0.0
 
-# 資料驗證
-pydantic==2.9.0
-pydantic-settings==2.5.0
-email-validator==2.2.0
+# AsyncPG - PostgreSQL 非同步驅動
+asyncpg>=0.29.0,<0.30.0
 
-# 檔案處理
-python-magic==0.4.27  # Linux 版本
-pypdf2==3.0.0
-python-docx==1.1.0
-pillow==10.4.0
+# Alembic - 資料庫遷移工具
+alembic>=1.13.0,<2.0.0
 
-# 向量與 RAG
-qdrant-client==1.11.0
-langchain==0.3.0
-langchain-openai==0.2.0
-openai==1.51.0
-tiktoken==0.7.0
+# ==============================================================================
+# 快取 (Caching) - 可選
+# ==============================================================================
+# Redis - 快取與 Session 管理 (可選功能)
+redis>=5.0.0,<6.0.0
 
-# HTTP 客戶端
-httpx==0.27.0
-aiofiles==24.1.0
+# ==============================================================================
+# 認證與安全 (Authentication & Security)
+# ==============================================================================
+# Python-JOSE - JWT Token 處理
+python-jose[cryptography]>=3.3.0,<4.0.0
 
-# 工具
-python-dotenv==1.0.0
+# Passlib - 密碼雜湊與驗證
+passlib[bcrypt]>=1.7.4,<2.0.0
 
-# 監控與日誌
-python-json-logger==2.0.0
+# Bcrypt - 直接指定 bcrypt 版本以確保相容性
+bcrypt>=4.0.1,<5.0.0
+
+# ==============================================================================
+# 資料驗證 (Data Validation)
+# ==============================================================================
+# Pydantic - 資料驗證與序列化
+pydantic>=2.9.0,<3.0.0
+
+# Pydantic-Settings - 設定管理
+pydantic-settings>=2.5.0,<3.0.0
+
+# Email-Validator - Email 格式驗證
+email-validator>=2.2.0,<3.0.0
+
+# ==============================================================================
+# 檔案處理 (File Handling)
+# ==============================================================================
+# AIOFiles - 非同步檔案 I/O
+aiofiles>=24.1.0,<25.0.0
+
+# ==============================================================================
+# 環境變數管理 (Environment Management)
+# ==============================================================================
+# Python-Dotenv - .env 檔案讀取
+python-dotenv>=1.0.0,<2.0.0
+
+# ==============================================================================
+# 版本要求
+# ==============================================================================
+# Python 3.10+ (使用 SQLAlchemy 2.0 的 async 功能、新型別提示等)
+# 建議使用 Python 3.10 或更高版本
