--- a/requirements.txt
+++ b/requirements.txt
@@ -58,6 +58,23 @@ email-validator>=2.2.0,<3.0.0
 # AIOFiles - 非同步檔案 I/O
 aiofiles>=24.1.0,<25.0.0
 
+# 文件轉換工具
+markitdown>=0.0.1a2
+python-docx>=1.1.0
+openpyxl>=3.1.0
+
+# OpenCC - 簡繁轉換
+opencc-python-reimplemented>=0.1.7
+
+# Requests - HTTP 請求（Ollama API）
+requests>=2.31.0
+
+# NumPy - 數值計算
+numpy>=1.24.0
+
+# tqdm - 進度條
+tqdm>=4.66.0
+
 # ==============================================================================
 # 環境變數管理 (Environment Management)
 # ==============================================================================
