Feat:加入後端query邏輯

--- a/requirements.txt
+++ b/requirements.txt
@@ -76,6 +76,15 @@ numpy>=1.24.0
 tqdm>=4.66.0
 
 # ==============================================================================
+# RAG 功能 (RAG Functionality)
+# ==============================================================================
+# Sentence Transformers - Reranker 模型
+sentence-transformers>=5.1.0
+
+# OpenCC - 簡繁轉換（已包含但再次確認）
+opencc-python-reimplemented>=0.1.7
+
+# ==============================================================================
 # 環境變數管理 (Environment Management)
 # ==============================================================================
 # Python-Dotenv - .env 檔案讀取
